Fix default jump to title position.

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ h3 div {
   height: 24px;
 }
 
-#current-song-title {
+#title {
   font-size: 1.1em;
   font-weight: bold;
 }
